--- a/scss/layout/_create-gifo-1.scss
+++ b/scss/layout/_create-gifo-1.scss
@@ -1,6 +1,8 @@
 .create-gifo {
     display: none;
     padding-top: 28px;
+    padding-bottom: 78px;
+    background-color: $color-white;
     &__screen {
         width: 300px;
         height: 390px;
