--- a/css/styles.css
+++ b/css/styles.css
@@ -917,22 +917,22 @@ footer__icon {
 
 .video-container {
   margin: 0 auto;
-  margin-top: 50px;
   width: 240px;
-  height: 180px;
+  height: auto;
   position: relative;
   bottom: 235px;
 }
 @media only screen and (min-width: 768px) {
   .video-container {
     width: 400px;
-    height: 290px;
+    height: auto;
   }
 }
 
 .video-box {
   width: 100%;
-  height: 100%;
+  height: auto;
+  padding-top: 50px;
 }
 
 .video-info {
