--- a/scss/layout/_create-gifo-1.scss
+++ b/scss/layout/_create-gifo-1.scss
@@ -72,7 +72,10 @@
 .video-box {
     width: 100%;
     height: auto;
-    padding-top: 50px;
+    padding-top: 0;
+    @include respond-to($breakpoint-tablet){
+        padding-top: 50px;
+    }
 }
 .video-info {
     width: 100%;
