--- a/scss/layout/_create-gifo-1.scss
+++ b/scss/layout/_create-gifo-1.scss
@@ -73,8 +73,8 @@
     width: 100%;
     height: auto;
     padding-top: 0;
-    position: relative;
-    bottom: 30px;
+    // position: relative;
+    // bottom: 30px;
     @include respond-to($breakpoint-tablet){
         padding-top: 50px;
         bottom: 0;
