--- a/css/styles.css
+++ b/css/styles.css
@@ -932,7 +932,7 @@ footer__icon {
 .video-box {
   width: 100%;
   height: auto;
-  padding-top: 0;
+  padding-top: 20px;
 }
 @media only screen and (min-width: 768px) {
   .video-box {
