--- a/scss/layout/_create-gifo-1.scss
+++ b/scss/layout/_create-gifo-1.scss
@@ -72,7 +72,7 @@
 .video-box {
     width: 100%;
     height: auto;
-    padding-top: 0;
+    padding-top: 20px;
     // position: relative;
     // bottom: 30px;
     @include respond-to($breakpoint-tablet){
