--- a/scss/layout/_create-gifo-1.scss
+++ b/scss/layout/_create-gifo-1.scss
@@ -72,9 +72,9 @@
 .video-box {
     width: 100%;
     height: auto;
-    padding-top: 5px;
-    // position: relative;
-    // bottom: 30px;
+    padding-top: 0;
+    position: relative;
+    bottom: 10px;
     @include respond-to($breakpoint-tablet){
         padding-top: 50px;
         bottom: 0;
