--- a/css/styles.css
+++ b/css/styles.css
@@ -918,14 +918,14 @@ footer__icon {
 .video-container {
   margin: 0 auto;
   width: 240px;
-  height: auto;
+  height: 180px;
   position: relative;
   bottom: 235px;
 }
 @media only screen and (min-width: 768px) {
   .video-container {
     width: 400px;
-    height: auto;
+    height: 290px;
   }
 }
 
