--- a/css/styles.css
+++ b/css/styles.css
@@ -990,6 +990,13 @@ footer__icon {
   background: url("../img/icon-link-hover.svg");
 }
 
+.trash-icon {
+  background: url("../img/icon-trash-normal.svg");
+}
+.trash-icon:hover {
+  background: url("../img/icon-trash-hover.svg");
+}
+
 .create-gifo-step {
   width: 32px;
   height: 32px;
